# backend_infographics

./: .gitignore  LICENSE  README.md  api_curl_tests.sh  api_validation.py  frontend_integration_guide.md  package.json  test_specific_endpoints.py  validate_api.sh  youtube_transcript_test.sh
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  com.sh  deploy.sh  deploy_with_ssl.sh  docker-compose.prod.yml  docker-compose.yml  fixng.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  res.sh  run.py  setup.py  validate_embeddings.py
backend/certbot/conf/accounts/acme-v02.api.letsencrypt.org/directory/87330a2c6ab7b7610dc7f422feab531a/: meta.json  private_key.json  regr.json
backend/certbot/conf/archive/api.videotoinfographics.com/: cert1.pem  cert2.pem  cert3.pem  cert4.pem  cert5.pem  fullchain1.pem  fullchain2.pem  fullchain3.pem  fullchain4.pem  fullchain5.pem  privkey1.pem  privkey2.pem  privkey3.pem  privkey4.pem  privkey5.pem
backend/certbot/conf/live/api.videotoinfographics.com/: cert.pem  chain.pem  fullchain.pem  privkey.pem
backend/certbot/conf/renewal/: api.videotoinfographics.com.conf
backend/nginx/: api-simple.conf  api.conf.backup  default.conf
backend/scripts/: load_images_to_qdrant.py
backend/services/: infographic_generator.py  template_service.py  vector_db.py
backend/tests/: __init__.py  conftest.py  test_main.py
backend_infographics_config/: backend_README.md  deploy_with_ssl.sh  docker-compose.prod.yml  env.production
backend_infographics_config/certbot/conf/accounts/acme-v02.api.letsencrypt.org/directory/c115606100c29898a53f5cd824f5478a/: meta.json  private_key.json  regr.json
backend_infographics_config/nginx/: nginx.conf
